--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The JavaScript Oxidation Compiler">
     <title>Oxc - The JavaScript Oxidation Compiler</title>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Boshen/oxc-assets/main/oxc.ico">
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/oxc-project/oxc-assets/square.ico">
     <script type="module" crossorigin src="https://oxc-project.github.io/oxc/assets/main-4GFq-Ydv.js"></script>
     <link rel="modulepreload" crossorigin href="https://oxc-project.github.io/oxc/assets/modulepreload-polyfill-B5Qt9EMX.js">
   </head>
